[package]
name = "imagecli"
version = "0.1.0"
authors = ["David Park <dpjungmin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "imagix"
path = "src/imagix/mod.rs"

[[bin]]
name = "imagecli"
path = "src/imagecli.rs"

[dependencies]
image = "0.23.7"
structopt = "0.3.15"